# platform_services

./: .gitignore
deploy/: docker-compose.yml
libs/: pyproject.toml
libs/raina_common/: events.py
services/notification-service/: Dockerfile  README.md  pyproject.toml
services/notification-service/app/: logger.py  main.py  rabbit_consumer.py  schemas.py  settings.py  websocket_manager.py
services/notification-service/tests/: test_smoke.py
services/passport-service/: .env.example  Dockerfile  pyproject.toml
services/passport-service/app/: handoff_store.py  main.py  oidc.py  session_store.py  settings.py
services/passport-service/app/core/: sentinel_client.py
services/passport-service/app/routers/: auth_routes.py  health_routes.py
services/sentinel-service/: .env.example  Dockerfile  pyproject.toml
services/sentinel-service/app/: logger.py  main.py  settings.py
services/sentinel-service/app/dal/: __init__.py  group_dal.py  permission_dal.py  policy_dal.py  role_dal.py  user_dal.py
services/sentinel-service/app/models/: __init__.py  group.py  permission.py  policy.py  role.py  user.py
services/sentinel-service/app/routers/: __init__.py  admin_groups.py  admin_permissions.py  admin_policies.py  admin_roles.py  admin_users.py  health_routes.py  resolve_routes.py
services/sentinel-service/app/schemas/: group.py  policy.py  resolve.py  role.py
services/sentinel-service/app/seeds/: seed_authz.py
services/sentinel-service/app/services/: evaluator.py  resolver.py
services/workspace-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/workspace-service/app/: config.py  logging_conf.py  main.py
services/workspace-service/app/dal/: workspace_dal.py
services/workspace-service/app/db/: mongodb.py
services/workspace-service/app/events/: rabbit.py
services/workspace-service/app/middleware/: correlation.py
services/workspace-service/app/models/: workspace.py
services/workspace-service/app/routers/: workspace_routes.py
services/workspace-service/tests/: test_workspace_routes.py
