# libs/pyproject.toml
[project]
name = "raina-common"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

# â† THIS is the key: package discovery must include the *libs* package
[tool.setuptools.packages.find]
where = ["."]
include = ["libs", "libs.*"]
