[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sentinel-service"
version = "0.1.0"
description = "Sentinel Service - Authorization (roles/groups/policies) for ASTRA Platforms"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",

  # Mongo
  "motor>=3.6",
  "pymongo>=4.8",
  "dnspython>=2.6",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]