[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "workspace-service"
version = "0.1.0"
description = "RAINA V2 Workspace Service (SoR for workspaces)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]",
  "pydantic>=2.7",
  "motor>=3.5",
  "python-dotenv>=1.0",
  "pydantic-settings>=2.3",
  "aio-pika>=9.4",
  "orjson>=3.10",
  "dnspython>=2.6",  # needed for mongodb+srv Atlas URIs
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
  "anyio>=4.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["app"]
addopts = "-q"
